examples/test/testpolicy14398.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14398
  namespace: namespace177
spec:
  podSelector:
    matchLabels:
      key24: value16
      key31: value22
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value31
          key11: value36
      podSelector:
        matchLabels:
          key14: value11
